Fix tabs in dark mode

--- a/src/styles/themes/dark.less
+++ b/src/styles/themes/dark.less
@@ -1,12 +1,12 @@
 .theme-dark {
   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("/assets/images/background.png") center top / cover !important;
 
-  .card, .page-item, .modal-content, .dropdown-menu, .dropdown-item, .dropdown-toggle {
+  .card, .page-item, .modal-content, .dropdown-menu, .dropdown-item, .dropdown-toggle, .nav-tabs .nav-link.active {
     background-color: #292b2c !important;
     color: whitesmoke !important;
   }
 
-  .btn-secondary {
+  .btn-secondary, .nav-tabs, .nav-link {
     color: #292b2c;
     background-color: #444;
     color: whitesmoke !important;
@@ -39,6 +39,10 @@
 
   .shopItem:hover {
     background-color: #444 !important;
+  }
+
+  .nav-tabs .nav-link.active {
+    border-color: #555 #555 #292b2c;
   }
 
   #map, .eggSlot {
